# mynteye_get_data

./: CMakeLists.txt  package.xml
config/: aruco.yaml  camera_info.yaml  pose_estimator.yaml  stereo_image_proc.yaml
launch/: rectfy.launch.py
src/: aruco_mean.cpp  cam_info_pub.cpp  publish_camera_info.cpp
